--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "@types/jest": "^27.5.2",
     "@types/node": "10.17.27",
     "@types/prettier": "2.6.0",
+    "aws-cdk": "2.29.1",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
-    "aws-cdk": "2.29.1",
     "ts-node": "^10.8.1",
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-amplify-alpha": "^2.29.1-alpha.0",
     "aws-cdk-lib": "2.29.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
