--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@types/jest": "^27.5.2",
 		"@types/node": "10.17.27",
 		"@types/prettier": "2.6.0",
-		"aws-cdk": "2.29.1",
+		"aws-cdk": "2.62.2",
 		"jest": "^27.5.1",
 		"ts-jest": "^27.1.4",
 		"ts-node": "^10.8.1",
@@ -23,7 +23,8 @@
 	},
 	"dependencies": {
 		"@aws-cdk/aws-amplify-alpha": "^2.29.1-alpha.0",
-		"aws-cdk-lib": "2.29.1",
+		"@aws-cdk/aws-apprunner-alpha": "^2.62.2-alpha.0",
+		"aws-cdk-lib": "2.62.2",
 		"constructs": "^10.0.0",
 		"source-map-support": "^0.5.21"
 	}
